good color display in all modes

--- a/examples/display/display-droso/seq1396_2R_19526211_19526451.tex
+++ b/examples/display/display-droso/seq1396_2R_19526211_19526451.tex
@@ -1,6 +1,6 @@
 \documentclass[11pt,twoside,reqno,a4paper]{article}
 \usepackage[french]{babel}
-\usepackage[usenames,dvipsnames]{color}
+\usepackage{xcolor}
 \usepackage[utf8]{inputenc}
 \usepackage{geometry}
 \geometry{a4paper}
@@ -8,7 +8,7 @@
 \usepackage{array,multirow}
 \begin{document}
 \noindent
-\newlength{\charwidth}\settowidth{\charwidth}{\texttt{A}}Motif(s): \textcolor{Red}{Mot\_1}, \textcolor{Blue}{Mot\_2}, \textcolor{Green}{Mot\_3}, \textcolor{Yellow}{Mot\_4}, \textcolor{Brown}{Mot\_5}\\
+\newlength{\charwidth}\settowidth{\charwidth}{\texttt{A}}Motif(s): \textcolor{red}{Mot\_1}, \textcolor{blue}{Mot\_2}, \textcolor{green}{Mot\_3}, \textcolor{yellow}{Mot\_4}, \textcolor{brown}{Mot\_5}, \textcolor{magenta}{Mot\_6}, \textcolor{cyan}{Mot\_7}, \textcolor{violet}{Mot\_8}, \textcolor{orange}{Mot\_9}, \textcolor{olive}{Mot\_10}\\
 \\
 $>$DroMel	seq1396\_2R\_19526211\_19526451	chr2R	19526211	19526451 \\
  \\
@@ -59,8 +59,8 @@ $>$DroMel	seq1396\_2R\_19526211\_19526451	chr2R	19526211	19526451 \\
 \hspace*{5\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 15\hspace*{3\charwidth}DroMoj	--------TC	T---T-----	------ACAG	TTTTAAAGTA	TAG-------	----------	\\
 \hspace*{5\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-23\hspace*{3\charwidth}DroGri	--------A\textcolor{Green}{A}	\textcolor{Green}{T}\textcolor{Green}{G}\textcolor{Green}{T}\textcolor{Green}{G}\textcolor{Green}{T}\textcolor{Green}{-}\textcolor{Green}{-}\textcolor{Green}{-}\textcolor{Green}{-}\textcolor{Green}{-}	\textcolor{Green}{-}\textcolor{Green}{-}\textcolor{Green}{-}\textcolor{Green}{-}\textcolor{Green}{-}\textcolor{Green}{-}\textcolor{Green}{T}\textcolor{Green}{C}\textcolor{Green}{T}\textcolor{Green}{G}	TTTT------	----------	----------	\\
-\hspace*{5\charwidth}\hspace*{7\charwidth}\hspace*{9\charwidth}\textcolor{Green}{8.1}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+23\hspace*{3\charwidth}DroGri	--------A\textcolor{green}{A}	\textcolor{green}{T}\textcolor{green}{G}\textcolor{green}{T}\textcolor{green}{G}\textcolor{green}{T}\textcolor{green}{-}\textcolor{green}{-}\textcolor{green}{-}\textcolor{green}{-}\textcolor{green}{-}	\textcolor{green}{-}\textcolor{green}{-}\textcolor{green}{-}\textcolor{green}{-}\textcolor{green}{-}\textcolor{green}{-}\textcolor{green}{T}\textcolor{green}{C}\textcolor{green}{T}\textcolor{green}{G}	TTTT------	----------	----------	\\
+\hspace*{5\charwidth}\hspace*{7\charwidth}\hspace*{9\charwidth}\textcolor{green}{8.1}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 \\
 115\hspace*{2\charwidth}DroMel	TTTGTAACCC	TACACTCGTG	CCCTGCCTAT	A---AATAAA	A---------	----------	\\
 \hspace*{5\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
@@ -153,8 +153,8 @@ $>$DroMel	seq1396\_2R\_19526211\_19526451	chr2R	19526211	19526451 \\
 \hspace*{5\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 27\hspace*{3\charwidth}DroPer	----------	----------	----------	----------	----------	----------	\\
 \hspace*{5\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-210\hspace*{2\charwidth}DroWil	AAATGTTAAG	TTAGCCGCGG	AACTCGTTTT	GGGTCTAAGC	AAAATGTTTG	ATTCTTGTAT	\\
-\hspace*{5\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+210\hspace*{2\charwidth}DroWil	AAATGTTAAG	\textcolor{orange}{T}\textcolor{orange}{T}\textcolor{orange}{A}\textcolor{orange}{G}\textcolor{orange}{C}\textcolor{orange}{C}\textcolor{orange}{G}\textcolor{orange}{C}\textcolor{orange}{G}\textcolor{orange}{G}	AACTCGTTTT	GGGTCTAAGC	AAAATGTTTG	ATTCTTGTAT	\\
+\hspace*{5\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{10\charwidth}\textcolor{orange}{13.0}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 114\hspace*{2\charwidth}DroVir	----------	----------	----------	----------	----------	----------	\\
 \hspace*{5\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 125\hspace*{2\charwidth}DroMoj	----------	----------	----------	----------	----------	----------	\\
