--- a/examples/display/display-droso/seq2820_3R_17227574_17227958.tex
+++ b/examples/display/display-droso/seq2820_3R_17227574_17227958.tex
@@ -1,6 +1,6 @@
 \documentclass[11pt,twoside,reqno,a4paper]{article}
 \usepackage[french]{babel}
-\usepackage[usenames,dvipsnames]{color}
+\usepackage{xcolor}
 \usepackage[utf8]{inputenc}
 \usepackage{geometry}
 \geometry{a4paper}
@@ -8,47 +8,47 @@
 \usepackage{array,multirow}
 \begin{document}
 \noindent
-\newlength{\charwidth}\settowidth{\charwidth}{\texttt{A}}Motif(s): \textcolor{Red}{Mot\_1}, \textcolor{Blue}{Mot\_2}, \textcolor{Green}{Mot\_3}, \textcolor{Yellow}{Mot\_4}, \textcolor{Brown}{Mot\_5}\\
+\newlength{\charwidth}\settowidth{\charwidth}{\texttt{A}}Motif(s): \textcolor{red}{Mot\_1}, \textcolor{blue}{Mot\_2}, \textcolor{green}{Mot\_3}, \textcolor{yellow}{Mot\_4}, \textcolor{brown}{Mot\_5}, \textcolor{magenta}{Mot\_6}, \textcolor{cyan}{Mot\_7}, \textcolor{violet}{Mot\_8}, \textcolor{orange}{Mot\_9}, \textcolor{olive}{Mot\_10}\\
 \\
 $>$DroMel	seq2820\_3R\_17227574\_17227958	chr3R	17227574	17227958 \\
  \\
-\texttt{1\hspace*{3\charwidth}DroMel	CCTTGT---C	GCC-------	--------C\textit{\textcolor{Red}{G}}	\textit{\textcolor{Red}{T}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{G}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{T}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{G}}A	---CCAGAC-	----------	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{29\charwidth}\textit{\textcolor{Red}{10.2}}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-1\hspace*{3\charwidth}DroSim	CCTTGT---C	GCC-------	--------C\textit{\textcolor{Red}{G}}	\textit{\textcolor{Red}{T}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{G}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{T}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{G}}A	---CCAGAC-	----------	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{29\charwidth}\textit{\textcolor{Red}{10.2}}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+\texttt{1\hspace*{3\charwidth}DroMel	CCTTGT---C	GCC-------	--------C\textit{\textcolor{red}{G}}	\textit{\textcolor{red}{T}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{G}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{G}}A	---CCAGAC-	----------	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{29\charwidth}\textit{\textcolor{red}{10.2}}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+1\hspace*{3\charwidth}DroSim	CCTTGT---C	GCC-------	--------C\textit{\textcolor{red}{G}}	\textit{\textcolor{red}{T}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{G}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{G}}A	---CCAGAC-	----------	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{29\charwidth}\textit{\textcolor{red}{10.2}}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 0\hspace*{3\charwidth}DroSec	----------	----------	----------	----------	----------	----------	\\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-1\hspace*{3\charwidth}DroYak	CCTTGT---C	GCG-------	--------C\textit{\textcolor{Red}{G}}	\textit{\textcolor{Red}{A}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{G}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{T}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{G}}A	---CCAGAC-	----------	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{29\charwidth}\textit{\textcolor{Red}{10.0}}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-1\hspace*{3\charwidth}DroEre	CCTGGT---C	GCC-------	--------C\textit{\textcolor{Red}{G}}	\textit{\textcolor{Red}{T}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{G}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{T}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{G}}A	---CCAGAC-	----------	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{29\charwidth}\textit{\textcolor{Red}{10.2}}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-1\hspace*{3\charwidth}DroAna	CCTTGT---C	\textit{\textcolor{Red}{G}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{-}}\textit{\textcolor{Red}{-}}\textit{\textcolor{Red}{-}}\textit{\textcolor{Red}{-}}\textit{\textcolor{Red}{-}}\textit{\textcolor{Red}{-}}\textit{\textcolor{Red}{-}}	\textit{\textcolor{Red}{-}}\textit{\textcolor{Red}{-}}\textit{\textcolor{Red}{-}}\textit{\textcolor{Red}{-}}\textit{\textcolor{Red}{-}}\textit{\textcolor{Red}{-}}\textit{\textcolor{Red}{-}}\textit{\textcolor{Red}{-}}\textit{\textcolor{Red}{G}}\textit{\textcolor{Red}{-}}	\textit{\textcolor{Red}{-}}\textit{\textcolor{Red}{-}}\textit{\textcolor{Red}{-}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{T}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{G}}A	---CTAGAC-	----------	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{10\charwidth}\textit{\textcolor{Red}{6.9}}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-1\hspace*{3\charwidth}DroPse	CC-TGT---C	CCGAG-----	CTACTTGTC\textit{\textcolor{Red}{G}}	\textit{\textcolor{Red}{G}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{G}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{T}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{T}}\textit{\textcolor{Red}{G}}G	---CCAGACG	GGACACGGGA	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{29\charwidth}\textit{\textcolor{Red}{8.6}}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-1\hspace*{3\charwidth}DroPer	CC-TGT---C	CTGAG-----	CTACTTGTC\textit{\textcolor{Red}{G}}	\textit{\textcolor{Red}{G}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{G}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{T}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{T}}\textit{\textcolor{Red}{G}}G	---CCAGACG	GGACACGGGA	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{29\charwidth}\textit{\textcolor{Red}{8.6}}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-1\hspace*{3\charwidth}DroGri	CCTGCTGCAC	GCCTGTGCGG	CTACTTGTCG	CCCAGGCCGA	GGCCCAGAC-	---------T	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+1\hspace*{3\charwidth}DroYak	CCTTGT---C	GCG-------	--------C\textit{\textcolor{red}{G}}	\textit{\textcolor{red}{A}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{G}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{G}}A	---CCAGAC-	----------	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{29\charwidth}\textit{\textcolor{red}{10.0}}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+1\hspace*{3\charwidth}DroEre	CCTGGT---C	GCC-------	--------C\textit{\textcolor{red}{G}}	\textit{\textcolor{red}{T}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{G}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{G}}A	---CCAGAC-	----------	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{29\charwidth}\textit{\textcolor{red}{10.2}}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+1\hspace*{3\charwidth}DroAna	CCTTGT---C	\textit{\textcolor{red}{G}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{-}}\textit{\textcolor{red}{-}}\textit{\textcolor{red}{-}}\textit{\textcolor{red}{-}}\textit{\textcolor{red}{-}}\textit{\textcolor{red}{-}}\textit{\textcolor{red}{-}}	\textit{\textcolor{red}{-}}\textit{\textcolor{red}{-}}\textit{\textcolor{red}{-}}\textit{\textcolor{red}{-}}\textit{\textcolor{red}{-}}\textit{\textcolor{red}{-}}\textit{\textcolor{red}{-}}\textit{\textcolor{red}{-}}\textit{\textcolor{red}{G}}\textit{\textcolor{red}{-}}	\textit{\textcolor{red}{-}}\textit{\textcolor{red}{-}}\textit{\textcolor{red}{-}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{G}}A	---CTAGAC-	----------	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{10\charwidth}\textit{\textcolor{red}{6.9}}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+1\hspace*{3\charwidth}DroPse	CC-TGT---C	CCGAG-----	CTACTTGTC\textit{\textcolor{red}{G}}	\textit{\textcolor{red}{G}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{G}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{G}}G	---CCAGACG	GGACACGGGA	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{29\charwidth}\textit{\textcolor{red}{8.6}}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+1\hspace*{3\charwidth}DroPer	CC-TGT---C	CTGAG-----	CTACTTGTC\textit{\textcolor{red}{G}}	\textit{\textcolor{red}{G}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{G}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{G}}G	---CCAGACG	GGACACGGGA	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{29\charwidth}\textit{\textcolor{red}{8.6}}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+1\hspace*{3\charwidth}DroGri	CCTGCTGCAC	GCCT\textcolor{orange}{G}\textcolor{orange}{T}\textcolor{orange}{G}\textcolor{orange}{C}\textcolor{orange}{G}\textcolor{orange}{G}	\textcolor{orange}{C}\textcolor{orange}{T}\textcolor{orange}{A}\textcolor{orange}{C}TTGTCG	CCCAGGCCGA	GGCCCAGAC-	---------T	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{14\charwidth}\textcolor{orange}{6.6}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 \\
-28\hspace*{2\charwidth}DroMel	-AG\textit{\textcolor{Red}{G}}\textit{\textcolor{Red}{A}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{A}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{T}}\textit{\textcolor{Red}{C}}	\textit{\textcolor{Red}{T}}\textit{\textcolor{Red}{T}}\textit{\textcolor{Red}{G}}AGGATGT	CGGCA---GG	AGG-------	-----ATGAA	ATNNNNNNNN	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{3\charwidth}\textit{\textcolor{Red}{9.7}}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-28\hspace*{2\charwidth}DroSim	-AG\textit{\textcolor{Red}{G}}\textit{\textcolor{Red}{A}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{A}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{T}}\textit{\textcolor{Red}{C}}	\textit{\textcolor{Red}{T}}\textit{\textcolor{Red}{T}}\textit{\textcolor{Red}{G}}AGGATGT	CGGCA---GG	AGG-------	-----ATGAA	ATATGTGTGA	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{3\charwidth}\textit{\textcolor{Red}{9.7}}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+28\hspace*{2\charwidth}DroMel	-AG\textit{\textcolor{red}{G}}\textit{\textcolor{red}{A}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{A}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{C}}	\textit{\textcolor{red}{T}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{G}}AGGATGT	CGGCA---GG	AGG-------	-----ATGAA	ATNNNNNNNN	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{3\charwidth}\textit{\textcolor{red}{9.7}}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+28\hspace*{2\charwidth}DroSim	-AG\textit{\textcolor{red}{G}}\textit{\textcolor{red}{A}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{A}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{C}}	\textit{\textcolor{red}{T}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{G}}AGGATGT	CGGCA---GG	AGG-------	-----ATGAA	ATATGTGTGA	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{3\charwidth}\textit{\textcolor{red}{9.7}}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 0\hspace*{3\charwidth}DroSec	----------	----------	----------	----------	----------	----------	\\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-28\hspace*{2\charwidth}DroYak	-AG\textit{\textcolor{Red}{G}}\textit{\textcolor{Red}{A}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{A}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{A}}\textit{\textcolor{Red}{C}}	\textit{\textcolor{Red}{T}}\textit{\textcolor{Red}{T}}\textit{\textcolor{Red}{G}}AGGATGT	CGGCA---GG	AGG-------	-----GTGAA	ATATGTGTGA	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{3\charwidth}\textit{\textcolor{Red}{9.3}}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-28\hspace*{2\charwidth}DroEre	-AG\textit{\textcolor{Red}{G}}\textit{\textcolor{Red}{A}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{A}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{A}}\textit{\textcolor{Red}{C}}	\textit{\textcolor{Red}{T}}\textit{\textcolor{Red}{T}}\textit{\textcolor{Red}{G}}AGGATGT	CGGCA---GG	AGG-------	-----GTGAA	ATATGTGTGA	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{3\charwidth}\textit{\textcolor{Red}{9.3}}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-24\hspace*{2\charwidth}DroAna	-AG\textit{\textcolor{Red}{G}}\textit{\textcolor{Red}{A}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{A}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{A}}\textit{\textcolor{Red}{C}}	\textit{\textcolor{Red}{T}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{G}}AGGATGT	CGGCA---GG	CGG-------	-----ATGAA	ATATGTGTGA	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{3\charwidth}\textit{\textcolor{Red}{9.3}}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-49\hspace*{2\charwidth}DroPse	CAC\textit{\textcolor{Red}{G}}\textit{\textcolor{Red}{A}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{G}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{A}}\textit{\textcolor{Red}{C}}	\textit{\textcolor{Red}{T}}\textit{\textcolor{Red}{T}}\textit{\textcolor{Red}{G}}AGGATGT	CGGCA---GG	ACATGCCGAG	CCGCAGTGAA	ATATGTGAGA	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{3\charwidth}\textit{\textcolor{Red}{10.2}}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-49\hspace*{2\charwidth}DroPer	CAC\textit{\textcolor{Red}{G}}\textit{\textcolor{Red}{A}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{G}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{A}}\textit{\textcolor{Red}{C}}	\textit{\textcolor{Red}{T}}\textit{\textcolor{Red}{T}}\textit{\textcolor{Red}{G}}AGGATGT	CGGCA---GG	ACACGCCGAG	CCGCAGTGAA	ATATGTGAGA	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{3\charwidth}\textit{\textcolor{Red}{10.2}}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-51\hspace*{2\charwidth}DroGri	CCG\textit{\textcolor{Red}{G}}\textit{\textcolor{Red}{T}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{T}}\textit{\textcolor{Red}{C}}\textit{\textcolor{Red}{A}}\textit{\textcolor{Red}{C}}	\textit{\textcolor{Red}{T}}\textit{\textcolor{Red}{T}}\textit{\textcolor{Red}{G}}AGTGTGT	CGTCGTCGGC	AGGACATGAT	C--------A	ATGTGTGGGA	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{3\charwidth}\textit{\textcolor{Red}{9.4}}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+28\hspace*{2\charwidth}DroYak	-AG\textit{\textcolor{red}{G}}\textit{\textcolor{red}{A}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{A}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{A}}\textit{\textcolor{red}{C}}	\textit{\textcolor{red}{T}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{G}}AGGATGT	CGGCA---GG	AGG-------	-----GTGAA	ATATGTGTGA	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{3\charwidth}\textit{\textcolor{red}{9.3}}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+28\hspace*{2\charwidth}DroEre	-AG\textit{\textcolor{red}{G}}\textit{\textcolor{red}{A}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{A}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{A}}\textit{\textcolor{red}{C}}	\textit{\textcolor{red}{T}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{G}}AGGATGT	CGGCA---GG	AGG-------	-----GTGAA	ATATGTGTGA	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{3\charwidth}\textit{\textcolor{red}{9.3}}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+24\hspace*{2\charwidth}DroAna	-AG\textit{\textcolor{red}{G}}\textit{\textcolor{red}{A}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{A}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{A}}\textit{\textcolor{red}{C}}	\textit{\textcolor{red}{T}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{G}}AGGATGT	CGGCA---GG	CGG-------	-----ATGAA	ATATGTGTGA	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{3\charwidth}\textit{\textcolor{red}{9.3}}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+49\hspace*{2\charwidth}DroPse	CAC\textit{\textcolor{red}{G}}\textit{\textcolor{red}{A}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{G}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{A}}\textit{\textcolor{red}{C}}	\textit{\textcolor{red}{T}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{G}}AGGATGT	CGGC\textcolor{magenta}{A}\textcolor{magenta}{-}\textcolor{magenta}{-}\textcolor{magenta}{-}\textcolor{magenta}{G}\textcolor{magenta}{G}	\textcolor{magenta}{A}\textcolor{magenta}{C}\textcolor{magenta}{A}\textcolor{magenta}{T}\textcolor{magenta}{G}\textcolor{magenta}{C}\textcolor{magenta}{C}GAG	CCGCAGTGAA	ATATGTGAGA	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{3\charwidth}\textit{\textcolor{red}{10.2}}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{17\charwidth}\textcolor{magenta}{7.4}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+49\hspace*{2\charwidth}DroPer	CAC\textit{\textcolor{red}{G}}\textit{\textcolor{red}{A}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{G}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{A}}\textit{\textcolor{red}{C}}	\textit{\textcolor{red}{T}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{G}}AGGATGT	CGGC\textcolor{magenta}{A}\textcolor{magenta}{-}\textcolor{magenta}{-}\textcolor{magenta}{-}\textcolor{magenta}{G}\textcolor{magenta}{G}	\textcolor{magenta}{A}\textcolor{magenta}{C}\textcolor{magenta}{A}\textcolor{magenta}{C}\textcolor{magenta}{G}\textcolor{magenta}{C}\textcolor{magenta}{C}GAG	CCGCAGTGAA	ATATGTGAGA	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{3\charwidth}\textit{\textcolor{red}{10.2}}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{17\charwidth}\textcolor{magenta}{8.3}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+51\hspace*{2\charwidth}DroGri	CCG\textit{\textcolor{red}{G}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{A}}\textit{\textcolor{red}{C}}	\textit{\textcolor{red}{T}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{G}}AGTGTGT	CGTCGTCGGC	AGGACATGAT	C--------A	ATGTGTGGGA	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{3\charwidth}\textit{\textcolor{red}{9.4}}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 \\
 73\hspace*{2\charwidth}DroMel	NNNNNNNNNN	NNNNNNNNNN	NNNNNNNNNN	NNNNNNNNNN	NNN-----NN	NNNNN-NNNN	\\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
@@ -81,10 +81,10 @@ $>$DroMel	seq2820\_3R\_17227574\_17227958	chr3R	17227574	17227958 \\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 118\hspace*{1\charwidth}DroAna	CGGTCAG---	----------	----TGGCCA	CA-------G	TCCAGGCT--	-ATGTGT---	\\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-138\hspace*{1\charwidth}DroPse	GTGGCAG---	----------	---------A	CA-------G	A\textcolor{Red}{C}\textcolor{Red}{C}\textcolor{Red}{A}\textcolor{Red}{G}\textcolor{Red}{T}\textcolor{Red}{G}\textcolor{Red}{A}\textcolor{Red}{G}\textcolor{Red}{T}	\textcolor{Red}{C}CTGGTCCAG	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{41\charwidth}\textcolor{Red}{8.4}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-138\hspace*{1\charwidth}DroPer	GTGGCAG---	----------	---------A	CA-------G	A\textcolor{Red}{C}\textcolor{Red}{C}\textcolor{Red}{A}\textcolor{Red}{G}\textcolor{Red}{T}\textcolor{Red}{G}\textcolor{Red}{A}\textcolor{Red}{G}\textcolor{Red}{T}	\textcolor{Red}{C}CTGGTCCAG	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{41\charwidth}\textcolor{Red}{8.4}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+138\hspace*{1\charwidth}DroPse	GTGGCAG---	----------	---------A	CA-------G	A\textcolor{red}{C}\textcolor{red}{C}\textcolor{red}{A}\textcolor{red}{G}\textcolor{red}{T}\textcolor{red}{G}\textcolor{red}{A}\textcolor{red}{G}\textcolor{red}{T}	\textcolor{red}{C}CTGGTCCAG	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{41\charwidth}\textcolor{red}{8.4}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+138\hspace*{1\charwidth}DroPer	GTGGCAG---	----------	---------A	CA-------G	A\textcolor{red}{C}\textcolor{red}{C}\textcolor{red}{A}\textcolor{red}{G}\textcolor{red}{T}\textcolor{red}{G}\textcolor{red}{A}\textcolor{red}{G}\textcolor{red}{T}	\textcolor{red}{C}CTGGTCCAG	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{41\charwidth}\textcolor{red}{8.4}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 122\hspace*{1\charwidth}DroGri	TGGGCAGACA	CAGATTCAAT	TCAATTGCTG	CAATATTTTG	ACCAGCTTGT	CA------AG	\\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 \\
@@ -128,22 +128,22 @@ $>$DroMel	seq2820\_3R\_17227574\_17227958	chr3R	17227574	17227958 \\
 \\
 221\hspace*{1\charwidth}DroMel	----------	---------N	NNNNNNNNNN	NNNNNNNNNN	NNNNNN-NN-	----------	\\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-211\hspace*{1\charwidth}DroSim	----------	---------T	GTTTTGGTTG	TCGCCCCGGG	ACATTT-GG-	----------	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+211\hspace*{1\charwidth}DroSim	----------	---------T	GTTTTGGTT\textcolor{orange}{G}	\textcolor{orange}{T}\textcolor{orange}{C}\textcolor{orange}{G}\textcolor{orange}{C}\textcolor{orange}{C}\textcolor{orange}{C}\textcolor{orange}{C}\textcolor{orange}{G}\textcolor{orange}{G}G	ACATTT-GG-	----------	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{29\charwidth}\textcolor{orange}{8.2}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 0\hspace*{3\charwidth}DroSec	----------	----------	----------	----------	----------	----------	\\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-221\hspace*{1\charwidth}DroYak	----------	---------T	GTTTTGGTTG	TCGCCGCGGG	ACATTT-GG-	----------	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-221\hspace*{1\charwidth}DroEre	----------	---------T	GTTTTGGTTG	TCGCCCCGGG	ACATTT-GG-	----------	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+221\hspace*{1\charwidth}DroYak	----------	---------T	GTTTTGGTT\textcolor{orange}{G}	\textcolor{orange}{T}\textcolor{orange}{C}\textcolor{orange}{G}\textcolor{orange}{C}\textcolor{orange}{C}\textcolor{orange}{G}\textcolor{orange}{C}\textcolor{orange}{G}\textcolor{orange}{G}G	ACATTT-GG-	----------	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{29\charwidth}\textcolor{orange}{12.4}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+221\hspace*{1\charwidth}DroEre	----------	---------T	GTTTTGGTT\textcolor{orange}{G}	\textcolor{orange}{T}\textcolor{orange}{C}\textcolor{orange}{G}\textcolor{orange}{C}\textcolor{orange}{C}\textcolor{orange}{C}\textcolor{orange}{C}\textcolor{orange}{G}\textcolor{orange}{G}G	ACATTT-GG-	----------	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{29\charwidth}\textcolor{orange}{8.2}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 213\hspace*{1\charwidth}DroAna	----------	---------T	GTTTTGATTG	CCACCCCGAG	ACAATT-GC-	----------	\\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 258\hspace*{1\charwidth}DroPse	----------	---------T	ATTTTGATTT	GCGCCCCGGG	ACATTTTGC-	----------	\\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 259\hspace*{1\charwidth}DroPer	----------	---------T	ATTTTGATTT	GCGCCCCGGG	ACA-TTTGC-	----------	\\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-284\hspace*{1\charwidth}DroGri	TGTTATGTTT	GCTATTTGTT	ATTTTGATTT	GCGCCACAGG	ACACGGCGGT	TGGCCACAAT	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+284\hspace*{1\charwidth}DroGri	TGTTATGTTT	GCTATTTGTT	ATTTTGATTT	GCGCCAC\textcolor{magenta}{A}\textcolor{magenta}{G}\textcolor{magenta}{G}	\textcolor{magenta}{A}\textcolor{magenta}{C}\textcolor{magenta}{A}\textcolor{magenta}{C}\textcolor{magenta}{G}\textcolor{magenta}{G}\textcolor{magenta}{C}GGT	TGGCCACAAT	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{37\charwidth}\textcolor{magenta}{6.7}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 \\
 250\hspace*{1\charwidth}DroMel	---NNNNNNN	NNNNNNNN-N	NNNNNNNNNN	NNNNNNN---	----------	----------	\\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
@@ -161,13 +161,13 @@ $>$DroMel	seq2820\_3R\_17227574\_17227958	chr3R	17227574	17227958 \\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 288\hspace*{1\charwidth}DroPer	---GACACAT	TAGTGGAC-C	ACTGTTTGGT	AACAAATTTG	ATAATCGCCA	CGCCGGGGCG	\\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-344\hspace*{1\charwidth}DroGri	TGCGAC\textcolor{Brown}{A}\textcolor{Brown}{C}\textcolor{Brown}{A}\textcolor{Brown}{T}	\textcolor{Brown}{T}\textcolor{Brown}{A}\textcolor{Brown}{G}\textcolor{Brown}{C}\textcolor{Brown}{A}\textcolor{Brown}{G}CGAC	AATGTTTT\textcolor{Red}{G}\textcolor{Red}{-}	\textcolor{Red}{-}\textcolor{Red}{-}\textcolor{Red}{-}\textcolor{Red}{-}\textcolor{Red}{-}\textcolor{Red}{-}\textcolor{Red}{-}\textcolor{Red}{-}\textcolor{Red}{-}\textcolor{Red}{-}	\textcolor{Red}{-}\textcolor{Red}{-}\textcolor{Red}{-}\textcolor{Red}{-}\textcolor{Red}{T}\textcolor{Red}{C}\textcolor{Red}{G}\textcolor{Red}{C}\textcolor{Red}{C}\textcolor{Red}{C}	\textcolor{Red}{C}\textcolor{Red}{T}\textcolor{Red}{G}AGTGGCG	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{6\charwidth}\textcolor{Brown}{6.5}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{19\charwidth}\textcolor{Red}{6.9}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+344\hspace*{1\charwidth}DroGri	TGCGAC\textcolor{brown}{A}\textcolor{brown}{C}\textcolor{brown}{A}\textcolor{brown}{T}	\textcolor{brown}{T}\textcolor{brown}{A}\textcolor{brown}{G}\textcolor{brown}{C}\textcolor{brown}{A}\textcolor{brown}{G}CGAC	AATGTTTT\textcolor{red}{G}\textcolor{red}{-}	\textcolor{red}{-}\textcolor{red}{-}\textcolor{red}{-}\textcolor{red}{-}\textcolor{red}{-}\textcolor{red}{-}\textcolor{red}{-}\textcolor{red}{-}\textcolor{red}{-}\textcolor{red}{-}	\textcolor{red}{-}\textcolor{red}{-}\textcolor{red}{-}\textcolor{red}{-}\textcolor{red}{T}\textcolor{red}{C}\textcolor{red}{G}\textcolor{red}{C}\textcolor{red}{C}\textcolor{red}{C}	\textcolor{red}{C}\textcolor{red}{T}\textcolor{red}{G}\textcolor{violet}{A}\textcolor{violet}{G}\textcolor{violet}{T}\textcolor{violet}{G}\textcolor{violet}{G}\textcolor{violet}{C}\textcolor{violet}{G}	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{6\charwidth}\textcolor{brown}{6.5}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{19\charwidth}\textcolor{red}{6.9}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 \\
 283\hspace*{1\charwidth}DroMel	----------	----NNNNNN	NNNNNNNNNN	NN--NNNNNN	NNNNNN----	----------	\\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-273\hspace*{1\charwidth}DroSim	----------	----GGATGG	AAGGGA\textcolor{Yellow}{T}\textcolor{Yellow}{G}\textcolor{Yellow}{T}\textcolor{Yellow}{G}	\textcolor{Yellow}{T}\textcolor{Yellow}{A}\textcolor{Yellow}{-}\textcolor{Yellow}{-}\textcolor{Yellow}{G}\textcolor{Yellow}{C}\textcolor{Yellow}{G}\textcolor{Yellow}{C}CA	AGTCGG----	----------	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{26\charwidth}\textcolor{Yellow}{6.3}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+273\hspace*{1\charwidth}DroSim	----------	----GGATGG	AAGGGA\textcolor{yellow}{T}\textcolor{yellow}{G}\textcolor{yellow}{T}\textcolor{yellow}{G}	\textcolor{yellow}{T}\textcolor{yellow}{A}\textcolor{yellow}{-}\textcolor{yellow}{-}\textcolor{yellow}{G}\textcolor{yellow}{C}\textcolor{yellow}{G}\textcolor{yellow}{C}CA	AGTCGG----	----------	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{26\charwidth}\textcolor{yellow}{6.3}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 0\hspace*{3\charwidth}DroSec	----------	----------	----------	----------	----------	----------	\\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 283\hspace*{1\charwidth}DroYak	----------	----GGATGG	AAGGGAAGGG	TA--GCGCCA	AGTCGG----	----------	\\
@@ -180,19 +180,19 @@ $>$DroMel	seq2820\_3R\_17227574\_17227958	chr3R	17227574	17227958 \\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 345\hspace*{1\charwidth}DroPer	C--TCTGTCT	GAGTGGCAGG	AATGGAGAGG	CACGGAGCCA	ACTGGCGACT	GGGACTGGGA	\\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-389\hspace*{1\charwidth}DroGri	TAGTCTGTC-	----------	----------	----------	------GACT	ACAACTGCAA	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+389\hspace*{1\charwidth}DroGri	\textcolor{violet}{T}\textcolor{violet}{A}\textcolor{violet}{G}TCTGTC-	----------	----------	----------	------GACT	ACAACTGCAA	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{0\charwidth}\textcolor{violet}{6.8}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 \\
 313\hspace*{1\charwidth}DroMel	----------	------NNNN	NNNNNNNNNN	N-----NNNN	NNNNN-----	-NNNN-----	\\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-303\hspace*{1\charwidth}DroSim	----------	------AACA	\textcolor{Red}{C}\textcolor{Red}{A}\textcolor{Red}{G}\textcolor{Red}{G}\textcolor{Red}{A}\textcolor{Red}{G}\textcolor{Red}{G}\textcolor{Red}{G}\textcolor{Red}{T}\textcolor{Red}{C}	G-----GACC	ACACA-----	-ACAG-----	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{20\charwidth}\textcolor{Red}{8.2}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+303\hspace*{1\charwidth}DroSim	----------	------AACA	\textcolor{red}{C}\textcolor{red}{A}\textcolor{red}{G}\textcolor{red}{G}\textcolor{red}{A}\textcolor{red}{G}\textcolor{red}{G}\textcolor{red}{G}\textcolor{red}{T}\textcolor{red}{C}	G-----GACC	ACACA-----	-ACAG-----	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{20\charwidth}\textcolor{red}{8.2}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 0\hspace*{3\charwidth}DroSec	----------	----------	----------	----------	----------	-----NNNNN	\\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-313\hspace*{1\charwidth}DroYak	----------	------GAGA	\textcolor{Red}{C}\textcolor{Red}{C}\textcolor{Red}{G}\textcolor{Red}{G}\textcolor{Red}{A}\textcolor{Red}{G}\textcolor{Red}{G}\textcolor{Red}{G}\textcolor{Red}{T}\textcolor{Red}{C}	G-----GACC	ACACA-----	-ACAG-----	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{20\charwidth}\textcolor{Red}{7.4}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-313\hspace*{1\charwidth}DroEre	----------	------AGGA	\textcolor{Red}{C}\textcolor{Red}{C}\textcolor{Red}{G}\textcolor{Red}{G}\textcolor{Red}{A}\textcolor{Red}{G}\textcolor{Red}{G}\textcolor{Red}{G}\textcolor{Red}{T}\textcolor{Red}{C}	G-----GACC	ACACA-----	-ACAG-----	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{20\charwidth}\textcolor{Red}{7.4}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+313\hspace*{1\charwidth}DroYak	----------	------GAGA	\textcolor{red}{C}\textcolor{red}{C}\textcolor{red}{G}\textcolor{red}{G}\textcolor{red}{A}\textcolor{red}{G}\textcolor{red}{G}\textcolor{red}{G}\textcolor{red}{T}\textcolor{red}{C}	G-----GACC	ACACA-----	-ACAG-----	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{20\charwidth}\textcolor{red}{7.4}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+313\hspace*{1\charwidth}DroEre	----------	------AGGA	\textcolor{red}{C}\textcolor{red}{C}\textcolor{red}{G}\textcolor{red}{G}\textcolor{red}{A}\textcolor{red}{G}\textcolor{red}{G}\textcolor{red}{G}\textcolor{red}{T}\textcolor{red}{C}	G-----GACC	ACACA-----	-ACAG-----	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{20\charwidth}\textcolor{red}{7.4}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 300\hspace*{1\charwidth}DroAna	----------	----GAATCA	CAAGCGGTCC	AAAAAAGACC	ACACA-----	-ACCG-----	\\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 403\hspace*{1\charwidth}DroPse	CTGGTACTGT	GACTGGGACT	GTGACTGGGT	CTGGAAGACC	ACACA-----	-ACTG-----	\\
