--- a/examples/display/display-droso/seq6531_2L_21853080_21853669.tex
+++ b/examples/display/display-droso/seq6531_2L_21853080_21853669.tex
@@ -1,6 +1,6 @@
 \documentclass[11pt,twoside,reqno,a4paper]{article}
 \usepackage[french]{babel}
-\usepackage[usenames,dvipsnames]{color}
+\usepackage{xcolor}
 \usepackage[utf8]{inputenc}
 \usepackage{geometry}
 \geometry{a4paper}
@@ -8,7 +8,7 @@
 \usepackage{array,multirow}
 \begin{document}
 \noindent
-\newlength{\charwidth}\settowidth{\charwidth}{\texttt{A}}Motif(s): \textcolor{Red}{Mot\_1}, \textcolor{Blue}{Mot\_2}, \textcolor{Green}{Mot\_3}, \textcolor{Yellow}{Mot\_4}, \textcolor{Brown}{Mot\_5}\\
+\newlength{\charwidth}\settowidth{\charwidth}{\texttt{A}}Motif(s): \textcolor{red}{Mot\_1}, \textcolor{blue}{Mot\_2}, \textcolor{green}{Mot\_3}, \textcolor{yellow}{Mot\_4}, \textcolor{brown}{Mot\_5}, \textcolor{magenta}{Mot\_6}, \textcolor{cyan}{Mot\_7}, \textcolor{violet}{Mot\_8}, \textcolor{orange}{Mot\_9}, \textcolor{olive}{Mot\_10}\\
 \\
 $>$DroMel	seq6531\_2L\_21853080\_21853669	chr2L	21853080	21853669 \\
  \\
@@ -16,14 +16,14 @@ $>$DroMel	seq6531\_2L\_21853080\_21853669	chr2L	21853080	21853669 \\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 1\hspace*{3\charwidth}DroSim	GAA--CGAAC	CG----TCGA	AGAAGAAAGA	--GCCGCAGA	GGAAATCTCA	TGGACTGAAA	\\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-1\hspace*{3\charwidth}DroSec	GAA--CGAAC	CCG---TCGA	AGAAGAAGGA	--GCCGCAGA	CGAAATCTCA	TGGACTGAAA	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+1\hspace*{3\charwidth}DroSec	GAA--CGAAC	CCG---TCGA	AGAAGAA\textcolor{orange}{G}\textcolor{orange}{G}\textcolor{orange}{A}	\textcolor{orange}{-}\textcolor{orange}{-}\textcolor{orange}{G}\textcolor{orange}{C}\textcolor{orange}{C}\textcolor{orange}{G}\textcolor{orange}{C}\textcolor{orange}{A}\textcolor{orange}{G}A	CGAAATCTCA	TGGACTGAAA	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{27\charwidth}\textcolor{orange}{7.0}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 1\hspace*{3\charwidth}DroYak	GAA--CGGAC	CT----TTGA	TAAAGAAAAA	--GCCCCAGA	GGAAATTTCA	TGGACTGAAA	\\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 1\hspace*{3\charwidth}DroEre	GAA--CGAAT	CTCGAATTGA	AAAAGAAAGA	--GCCGCTGA	GGAAATCTCA	TGGACTGAAA	\\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-1\hspace*{3\charwidth}DroAna	GATATCCATT	CAAGATTCAA	GAAAGAAGAA	ATGCCGCTGA	GAAGATCTCA	TGGATGGAAA	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+1\hspace*{3\charwidth}DroAna	GATATCCATT	CAAGATTCAA	GAAAGAAGAA	ATG\textcolor{orange}{C}\textcolor{orange}{C}\textcolor{orange}{G}\textcolor{orange}{C}\textcolor{orange}{T}\textcolor{orange}{G}\textcolor{orange}{A}	\textcolor{orange}{G}\textcolor{orange}{A}\textcolor{orange}{A}GATCTCA	TGGATGGAAA	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{33\charwidth}\textcolor{orange}{6.7}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 \\
 53\hspace*{2\charwidth}DroMel	ACCATAAATT	TGATAATTGA	CTTTCCACC-	-----AAAGG	AA-AAGAAGC	CAAAGGAACC	\\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
@@ -33,8 +33,8 @@ $>$DroMel	seq6531\_2L\_21853080\_21853669	chr2L	21853080	21853669 \\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 53\hspace*{2\charwidth}DroYak	ACCATTAATT	TGAAAATCGA	CTTACAACC-	-----AACAG	AAGAAGAAAA	CAAAGGAACG	\\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-57\hspace*{2\charwidth}DroEre	ACCATAAATT	TGATAATTGA	CTTTCCACC-	-----AA---	AGGGAAAAAC	CGAAGGAACG	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+57\hspace*{2\charwidth}DroEre	ACCATAAATT	TGATAATTGA	CTTTCCACC-	-----AA---	A\textcolor{magenta}{G}\textcolor{magenta}{G}\textcolor{magenta}{G}\textcolor{magenta}{A}\textcolor{magenta}{A}\textcolor{magenta}{A}\textcolor{magenta}{A}\textcolor{magenta}{A}\textcolor{magenta}{C}	\textcolor{magenta}{C}GAAGGAACG	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{41\charwidth}\textcolor{magenta}{7.9}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 61\hspace*{2\charwidth}DroAna	ACCATAAATT	TGATAATTGA	CTTTCCACCC	AAATGAAAGA	AGAAAGAACA	GAAAGGAACC	\\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 \\
@@ -61,8 +61,8 @@ $>$DroMel	seq6531\_2L\_21853080\_21853669	chr2L	21853080	21853669 \\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 155\hspace*{1\charwidth}DroEre	GCG-GGGGAT	TCAGAAAATC	CAGTCAGTCA	CCTTAAAAAG	ACAACTGCAA	AACGGAAATG	\\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-180\hspace*{1\charwidth}DroAna	GACGGGGCAC	CCAGAAAACC	CAGTCACTCA	CTTCATATCG	ACAACTGCGA	AACGGAAATG	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+180\hspace*{1\charwidth}DroAna	GACGGGGCAC	CCAGAAAACC	C\textcolor{cyan}{A}\textcolor{cyan}{G}\textcolor{cyan}{T}\textcolor{cyan}{C}\textcolor{cyan}{A}\textcolor{cyan}{C}\textcolor{cyan}{T}\textcolor{cyan}{C}\textcolor{cyan}{A}	\textcolor{cyan}{C}TTCATATCG	ACAACTGCGA	AACGGAAATG	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{21\charwidth}\textcolor{cyan}{6.4}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 \\
 210\hspace*{1\charwidth}DroMel	TACATCATAA	AAATATTAAA	AATTCTCTGT	CATTCTTCTA	ATATGGTCTT	TTTGGACATT	\\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
@@ -70,23 +70,23 @@ $>$DroMel	seq6531\_2L\_21853080\_21853669	chr2L	21853080	21853669 \\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 211\hspace*{1\charwidth}DroSec	CACATCATAA	AAATATTGAA	AATTCTCTGT	CATTCTTCTA	ATATGGTCTT	TTTGGACATT	\\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-193\hspace*{1\charwidth}DroYak	TACATCATAA	AAATATTAAA	AATTCTCTCC	CATTCTTCTA	ATATTGTCTT	TTTA\textcolor{Red}{G}\textcolor{Red}{A}\textcolor{Red}{C}\textcolor{Red}{A}\textcolor{Red}{T}\textcolor{Red}{T}	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{54\charwidth}\textcolor{Red}{6.3}\hspace*{1\charwidth}\\
-214\hspace*{1\charwidth}DroEre	TACATCATAA	AAATATTAAA	AACTCTCCTC	CATTCTCTTA	ATATTGTCTT	TTTA\textcolor{Red}{G}\textcolor{Red}{A}\textcolor{Red}{C}\textcolor{Red}{A}\textcolor{Red}{T}\textcolor{Red}{T}	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{54\charwidth}\textcolor{Red}{6.9}\hspace*{1\charwidth}\\
+193\hspace*{1\charwidth}DroYak	TACATCATAA	AAATATTAAA	AATTCTCTCC	CATTCTTCTA	ATATTGTCTT	TTTA\textcolor{red}{G}\textcolor{red}{A}\textcolor{red}{C}\textcolor{red}{A}\textcolor{red}{T}\textcolor{red}{T}	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{54\charwidth}\textcolor{red}{6.3}\hspace*{1\charwidth}\\
+214\hspace*{1\charwidth}DroEre	TACATCATAA	AAATATTAAA	AACTCTCCTC	CATTCTCTTA	ATATTGTCTT	TTTA\textcolor{red}{G}\textcolor{red}{A}\textcolor{red}{C}\textcolor{red}{A}\textcolor{red}{T}\textcolor{red}{T}	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{54\charwidth}\textcolor{red}{6.9}\hspace*{1\charwidth}\\
 240\hspace*{1\charwidth}DroAna	TGCATCATAA	AAATATTAAA	AA-CCGGAGA	AATTC-----	---TGGCCTA	TTCTTTGAGT	\\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 \\
-270\hspace*{1\charwidth}DroMel	CTTGGA----	---AAGATAA	AAGTCGATGC	CGGTTGGCCG	CCGTTCCAGT	GCATTAGAGA	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-270\hspace*{1\charwidth}DroSim	CTTAGA----	---AAGATAA	AAGTCGGTGC	CGGTTGGCCG	CCGTTCCAGT	GCATTAGAGA	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-271\hspace*{1\charwidth}DroSec	CTTAGA----	---AAGATAA	AAGTCGGTGC	CGGTTGGCCG	CCGTTCCAGT	GCATTAGAGA	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-253\hspace*{1\charwidth}DroYak	\textcolor{Red}{C}\textcolor{Red}{C}\textcolor{Red}{T}\textcolor{Red}{G}GA----	---AAGATAA	AAGTCAGTGC	CGGTTGGCCG	TCGTTCCAGT	GCATTAGAGA	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{0\charwidth}\textcolor{Red}{6.3}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-274\hspace*{1\charwidth}DroEre	\textcolor{Red}{C}\textcolor{Red}{T}\textcolor{Red}{T}\textcolor{Red}{G}GA----	---AAGATAA	AAGTCGCTGC	CGGTTGGCCG	TCGTTCCAGT	GCATTAGAGA	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{0\charwidth}\textcolor{Red}{6.9}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+270\hspace*{1\charwidth}DroMel	CTTGGA----	---AAGATAA	AAGTCGATGC	CGG\textcolor{orange}{T}\textcolor{orange}{T}\textcolor{orange}{G}\textcolor{orange}{G}\textcolor{orange}{C}\textcolor{orange}{C}\textcolor{orange}{G}	\textcolor{orange}{C}\textcolor{orange}{C}\textcolor{orange}{G}TTCCAGT	GCATTAGAGA	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{33\charwidth}\textcolor{orange}{7.5}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+270\hspace*{1\charwidth}DroSim	CTTAGA----	---AAGATAA	AAGTCGGTGC	CGG\textcolor{orange}{T}\textcolor{orange}{T}\textcolor{orange}{G}\textcolor{orange}{G}\textcolor{orange}{C}\textcolor{orange}{C}\textcolor{orange}{G}	\textcolor{orange}{C}\textcolor{orange}{C}\textcolor{orange}{G}TTCCAGT	GCATTAGAGA	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{33\charwidth}\textcolor{orange}{7.5}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+271\hspace*{1\charwidth}DroSec	CTTAGA----	---AAGATAA	AAGTCGGTGC	CGG\textcolor{orange}{T}\textcolor{orange}{T}\textcolor{orange}{G}\textcolor{orange}{G}\textcolor{orange}{C}\textcolor{orange}{C}\textcolor{orange}{G}	\textcolor{orange}{C}\textcolor{orange}{C}\textcolor{orange}{G}TTCCAGT	GCATTAGAGA	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{33\charwidth}\textcolor{orange}{7.5}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+253\hspace*{1\charwidth}DroYak	\textcolor{red}{C}\textcolor{red}{C}\textcolor{red}{T}\textcolor{red}{G}GA----	---AAGATAA	AAGTCAGTGC	CGGTTGGCCG	TCGTTCCAGT	GCATTAGAGA	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{0\charwidth}\textcolor{red}{6.3}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+274\hspace*{1\charwidth}DroEre	\textcolor{red}{C}\textcolor{red}{T}\textcolor{red}{T}\textcolor{red}{G}GA----	---AAGATAA	A\textcolor{cyan}{A}\textcolor{cyan}{G}\textcolor{cyan}{T}\textcolor{cyan}{C}\textcolor{cyan}{G}\textcolor{cyan}{C}\textcolor{cyan}{T}\textcolor{cyan}{G}\textcolor{cyan}{C}	\textcolor{cyan}{C}GGTTGGCCG	TCGTTCCAGT	GCATTAGAGA	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{0\charwidth}\textcolor{red}{6.9}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{18\charwidth}\textcolor{cyan}{8.7}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 291\hspace*{1\charwidth}DroAna	CGTGGAGTGA	AGAAAGAGAA	AAGTCCGTAC	CGTCGGGGCG	TCGTTCCAGT	GCATTAGGGA	\\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 \\
@@ -98,8 +98,8 @@ $>$DroMel	seq6531\_2L\_21853080\_21853669	chr2L	21853080	21853669 \\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 306\hspace*{1\charwidth}DroYak	TCGCGTTT-A	AAATGGTACC	CCGATGGGCT	GCCAAGGCCG	TAAATCTACA	AAAGGGGCAC	\\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-327\hspace*{1\charwidth}DroEre	TCGCGTTT-A	AAATGGTACC	CCGATGGGCT	GTCAAGGCCG	TAAATCTAGA	AAAGGGGCAC	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+327\hspace*{1\charwidth}DroEre	TCGCGTTT-A	AAATGGTACC	CCGATGGGCT	GTCAAGGCCG	TAAATCTAGA	AAA\textcolor{magenta}{G}\textcolor{magenta}{G}\textcolor{magenta}{G}\textcolor{magenta}{G}\textcolor{magenta}{C}\textcolor{magenta}{A}\textcolor{magenta}{C}	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{53\charwidth}\textcolor{magenta}{6.4}\hspace*{1\charwidth}\\
 351\hspace*{1\charwidth}DroAna	TAGCATTGGA	AAATGGCAGT	TCAATGGGCT	GTCAAGGTCG	TAAATCTGAT	ATAGGGGCAC	\\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 \\
@@ -111,39 +111,39 @@ $>$DroMel	seq6531\_2L\_21853080\_21853669	chr2L	21853080	21853669 \\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 365\hspace*{1\charwidth}DroYak	TCTTTGCTGC	CCTCTCGTAT	AGCTCTAGTA	-ATTTCATAA	TTTTCA----	----TATTTC	\\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-386\hspace*{1\charwidth}DroEre	TCCTTGCTGC	CCTCTCGT\textcolor{Red}{G}\textcolor{Red}{T}	\textcolor{Red}{A}\textcolor{Red}{G}\textcolor{Red}{C}\textcolor{Red}{T}\textcolor{Red}{C}\textcolor{Red}{T}\textcolor{Red}{C}\textcolor{Red}{G}TA	-ATTTCATAA	TTTTCAATTT	TC-ATATTTC	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{18\charwidth}\textcolor{Red}{6.8}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+386\hspace*{1\charwidth}DroEre	\textcolor{magenta}{T}\textcolor{magenta}{C}\textcolor{magenta}{C}TTGCTGC	CCTCTCGT\textcolor{red}{G}\textcolor{red}{T}	\textcolor{red}{A}\textcolor{red}{G}\textcolor{red}{C}\textcolor{red}{T}\textcolor{red}{C}\textcolor{red}{T}\textcolor{red}{C}\textcolor{red}{G}TA	-ATTTCATAA	TTTTCAATTT	TC-ATATTTC	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{0\charwidth}\textcolor{magenta}{6.4}\hspace*{1\charwidth}\hspace*{15\charwidth}\textcolor{red}{6.8}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 411\hspace*{1\charwidth}DroAna	ACTTCGCTGC	CCTCTCGTGT	AGTTCTTGTA	ATTTTCATAA	TTTTCATATT	TCCACATGGA	\\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 \\
 433\hspace*{1\charwidth}DroMel	TCCGTGGCTC	A-GCAGCTGC	GCGCCTGCGC	TAAAGTGTCT	GACGGATGCG	GCGCA-----	\\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-433\hspace*{1\charwidth}DroSim	TCAGTGGCT\textcolor{Blue}{C}	\textcolor{Blue}{G}\textcolor{Blue}{-}\textcolor{Blue}{G}\textcolor{Blue}{C}\textcolor{Blue}{A}\textcolor{Blue}{G}\textcolor{Blue}{C}\textcolor{Blue}{T}\textcolor{Blue}{G}\textcolor{Blue}{C}	GAGCCTGCGC	AAAAGTATCT	GACGGATGCG	GCGTA-----	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{9\charwidth}\textcolor{Blue}{6.6}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-434\hspace*{1\charwidth}DroSec	TCAGTGGCT\textcolor{Blue}{C}	\textcolor{Blue}{G}\textcolor{Blue}{-}\textcolor{Blue}{G}\textcolor{Blue}{C}\textcolor{Blue}{A}\textcolor{Blue}{G}\textcolor{Blue}{C}\textcolor{Blue}{T}\textcolor{Blue}{G}\textcolor{Blue}{C}	GAGCCTGCGC	AAAAGTATCT	GACGGATGCG	GCGTA-----	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{9\charwidth}\textcolor{Blue}{6.6}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-416\hspace*{1\charwidth}DroYak	TCTTTGGCT\textcolor{Blue}{C}	\textcolor{Blue}{G}\textcolor{Blue}{-}\textcolor{Blue}{G}\textcolor{Blue}{C}\textcolor{Blue}{A}\textcolor{Blue}{G}\textcolor{Blue}{C}\textcolor{Blue}{T}\textcolor{Blue}{G}\textcolor{Blue}{C}	GCGCCTGCGC	CAAAGTGTTT	GACGGATGCG	GCGCA-----	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{9\charwidth}\textcolor{Blue}{6.6}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-444\hspace*{1\charwidth}DroEre	TTCCTGGCT\textcolor{Blue}{C}	\textcolor{Blue}{G}\textcolor{Blue}{-}\textcolor{Blue}{G}\textcolor{Blue}{C}\textcolor{Blue}{A}\textcolor{Blue}{G}\textcolor{Blue}{C}\textcolor{Blue}{T}\textcolor{Blue}{G}\textcolor{Blue}{C}	GCGCCTGCGC	TAAAGTGTTT	GACGGATGCG	GCGCA-----	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{9\charwidth}\textcolor{Blue}{6.6}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-471\hspace*{1\charwidth}DroAna	CCGGCAGCGA	GCGCAGCTGC	GCGCCTGCGC	AAATGTATCT	GACGGATGCG	GCGCATAGCG	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+433\hspace*{1\charwidth}DroSim	TCAGTGGCT\textcolor{blue}{C}	\textcolor{blue}{G}\textcolor{blue}{-}\textcolor{blue}{G}\textcolor{blue}{C}\textcolor{blue}{A}\textcolor{blue}{G}\textcolor{blue}{C}\textcolor{blue}{T}\textcolor{blue}{G}\textcolor{blue}{C}	GAGCCTGCGC	AAAAGTATCT	GACGGATGCG	GCGTA-----	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{9\charwidth}\textcolor{blue}{6.6}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+434\hspace*{1\charwidth}DroSec	TCAGTGGCT\textcolor{blue}{C}	\textcolor{blue}{G}\textcolor{blue}{-}\textcolor{blue}{G}\textcolor{blue}{C}\textcolor{blue}{A}\textcolor{blue}{G}\textcolor{blue}{C}\textcolor{blue}{T}\textcolor{blue}{G}\textcolor{blue}{C}	GAGCCTGCGC	AAAAGTATCT	GACGGATGCG	GCGTA-----	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{9\charwidth}\textcolor{blue}{6.6}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+416\hspace*{1\charwidth}DroYak	TCTTTGGCT\textcolor{blue}{C}	\textcolor{blue}{G}\textcolor{blue}{-}\textcolor{blue}{G}\textcolor{blue}{C}\textcolor{blue}{A}\textcolor{blue}{G}\textcolor{blue}{C}\textcolor{blue}{T}\textcolor{blue}{G}\textcolor{blue}{C}	GCGCCTGCGC	CAAAGTGTTT	GACGGATGCG	GCGCA-----	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{9\charwidth}\textcolor{blue}{6.6}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+444\hspace*{1\charwidth}DroEre	TTCCTGGCT\textcolor{blue}{C}	\textcolor{blue}{G}\textcolor{blue}{-}\textcolor{blue}{G}\textcolor{blue}{C}\textcolor{blue}{A}\textcolor{blue}{G}\textcolor{blue}{C}\textcolor{blue}{T}\textcolor{blue}{G}\textcolor{blue}{C}	GCGCCTGCGC	TAAAGTGTTT	GACGGATGCG	GCGCA-----	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{9\charwidth}\textcolor{blue}{6.6}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+471\hspace*{1\charwidth}DroAna	CCGGCAGCGA	GCGCAG\textcolor{violet}{C}\textcolor{violet}{T}\textcolor{violet}{G}\textcolor{violet}{C}	\textcolor{violet}{G}\textcolor{violet}{C}\textcolor{violet}{G}\textcolor{violet}{C}\textcolor{violet}{C}\textcolor{violet}{T}GCGC	AAATGTATCT	GACGGATGCG	GCGCATAGCG	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{16\charwidth}\textcolor{violet}{6.6}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 \\
-486\hspace*{1\charwidth}DroMel	-----TTCGA	TTTCGTTCTG	CC\textcolor{Brown}{A}\textcolor{Brown}{A}\textcolor{Brown}{A}\textcolor{Brown}{T}\textcolor{Brown}{T}\textcolor{Brown}{A}\textcolor{Brown}{G}\textcolor{Brown}{C}	\textcolor{Brown}{C}\textcolor{Brown}{G}GGCCCCGT	GATTTATGTC	GTCCTTCTGG	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{22\charwidth}\textcolor{Brown}{8.4}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+486\hspace*{1\charwidth}DroMel	-----TTCGA	TTTCGTTCTG	CC\textcolor{brown}{A}\textcolor{brown}{A}\textcolor{brown}{A}\textcolor{brown}{T}\textcolor{brown}{T}\textcolor{brown}{A}\textcolor{brown}{G}\textcolor{brown}{C}	\textcolor{brown}{C}\textcolor{brown}{G}GGCCCCGT	GATTTATGTC	GTCCTTCTGG	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{22\charwidth}\textcolor{brown}{8.4}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 486\hspace*{1\charwidth}DroSim	-----TTCGA	TTTCGTTCTG	CCAAATTAGA	CGGGTCCCGT	GATTTATGGC	GTCCTTCTGG	\\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 487\hspace*{1\charwidth}DroSec	-----TTCGA	TTTCGTTCTG	CCAAATTAGA	CGGGTCCCGT	GATTTATGTC	TTCCTTCTGG	\\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 469\hspace*{1\charwidth}DroYak	-----TTCAA	TTTCGTTCTG	CCAAATTAGC	CAGGCTCTGT	GATTTATGTC	GTCCTTTTGG	\\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-497\hspace*{1\charwidth}DroEre	-----TTCGA	TTTCGTTCTG	GC\textcolor{Brown}{A}\textcolor{Brown}{A}\textcolor{Brown}{A}\textcolor{Brown}{T}\textcolor{Brown}{T}\textcolor{Brown}{A}\textcolor{Brown}{G}\textcolor{Brown}{C}	\textcolor{Brown}{C}\textcolor{Brown}{G}GGCCCCGT	GATTTATGTC	GTCCTCCTGG	\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{22\charwidth}\textcolor{Brown}{8.4}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+497\hspace*{1\charwidth}DroEre	-----TTCGA	TTTCGTTCTG	GC\textcolor{brown}{A}\textcolor{brown}{A}\textcolor{brown}{A}\textcolor{brown}{T}\textcolor{brown}{T}\textcolor{brown}{A}\textcolor{brown}{G}\textcolor{brown}{C}	\textcolor{brown}{C}\textcolor{brown}{G}GGCCCCGT	GATTTATGTC	GTCCTCCTGG	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{22\charwidth}\textcolor{brown}{8.4}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 531\hspace*{1\charwidth}DroAna	CAGAGTTCGA	TTTCGTTCTG	CCAAATTAGC	CCGGACCGGT	GATTTATGTC	GTCCTTCC--	\\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 \\
-542\hspace*{1\charwidth}DroMel	CTCTTTGGCC	GTTTGTCCCT	TTTAGCCAGT	CCGCGTGACT	CGAGCGTTG\\
-\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+542\hspace*{1\charwidth}DroMel	CTCTTTGGC\textcolor{magenta}{C}	\textcolor{magenta}{G}\textcolor{magenta}{T}\textcolor{magenta}{T}\textcolor{magenta}{T}\textcolor{magenta}{G}\textcolor{magenta}{T}\textcolor{magenta}{C}\textcolor{magenta}{C}\textcolor{magenta}{C}T	TTTAGCCAGT	CCGCGTGACT	CGAGCGTTG\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{9\charwidth}\textcolor{magenta}{7.9}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 542\hspace*{1\charwidth}DroSim	CCCTTTGGCC	GTTTGGCCCT	TTTAGCCAGT	CCTCGTGACT	CGAGCGTTG\\
 \hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 543\hspace*{1\charwidth}DroSec	CCCTTTGGCC	GTTTGGCCCT	TTTAGCCAGT	CCTCGTGACT	CGAGCGTTG\\
